[package]
name = "google-somethin"
version = "0.1.4"
description = "A simple library that grabs Google search results..."
readme = "README.md"
license = "MIT"
repository = "https://github.com/GitStonic/google-somethin"
documentation = "https://docs.rs/google-somethin"
keywords = ["google", "search", "scraper"]
authors = ["GitStonic <kingstonicthe1@gmail.com>"]
edition = "2018"
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
select = "0.4"
scraper = "0.11"
reqwest = "0.10"
futures = "0.3"
